; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_date.c_ms_from_time.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/jscript/extr_date.c_ms_from_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NAN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @ms_from_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @ms_from_time(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call i64 @isnan(i64 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i64, i64* @NAN, align 8
  store i64 %9, i64* %2, align 8
  br label %20

10:                                               ; preds = %1
  %11 = load i64, i64* %3, align 8
  %12 = call i64 @fmod(i64 %11, i32 1000)
  store i64 %12, i64* %4, align 8
  %13 = load i64, i64* %4, align 8
  %14 = icmp slt i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %10
  %16 = load i64, i64* %4, align 8
  %17 = add nsw i64 %16, 1000
  store i64 %17, i64* %4, align 8
  br label %18

18:                                               ; preds = %15, %10
  %19 = load i64, i64* %4, align 8
  store i64 %19, i64* %2, align 8
  br label %20

20:                                               ; preds = %18, %8
  %21 = load i64, i64* %2, align 8
  ret i64 %21
}

declare dso_local i64 @isnan(i64) #1

declare dso_local i64 @fmod(i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
